# app.js
@@ -27,6 +27,7 @@ const chatRouter = require('./routes/chat-route')
 const groupRouter = require('./routes/group-route')
 const categoryRouter = require('./routes/categories-route')
 const citiesRouter = require('./routes/cities-route')
+const metroCitiesRouter = require('./routes/metroCity-route')
 const authorizationMiddleware = require('./middleware/authorization')
 const chatSchema = require('./models/chat-model')
 app.use('/uploads',express.static('uploads'))
@@ -43,6 +44,7 @@ app.use('/api/v1/user',authorizationMiddleware,userRouter)
 app.use('/api/v1/category',categoryRouter)
 app.use('/api/v1/group',groupRouter)
 app.use('/api/v1/cities',citiesRouter)
+app.use('/api/v1/metroCities',metroCitiesRouter)
 app.use('/api/v1/businessUser',authorizationMiddleware,businessUserRouter)
 app.use('/api/v1/posts',authorizationMiddleware,postRouter)
 app.use('/api/v1/chats',authorizationMiddleware,chatRouter)
